--- a/Functions/Functions.vcxproj.filters
+++ b/Functions/Functions.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Statistic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UniqRandom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FillRand.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Statistic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UniqRandom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
